把NeoForge的动态icon由反射改为mixin